# dail-leargas

./: .gitignore  app.py  basic-scraper-code.py  csv-parse.py  dail-debates.db-journal  debate-analysis.py  debate-get-contributions.py  debate-get-speakers.py  debate-language-detector.py  debate-sentiment-analysis.py  debate-speaker-contributions.py  download-list.txt  get-debates-csv.py  lingua-test.py  oireachtas-scraper.py  probdist-scraper.py  pyproject.toml  sample_debate.json  scraper.py  sql-test.py  stop-words.txt  td-metadata  td-overall-data.py  urls.txt
app/: __init__.py  filters.py  routes.py
app/plotlydash/: dashboard.py
app/static/: debate.css  debateindex.css  debateindex.js  debatetext.css  general.css  generalt.css  graphs.js  home.css  home.js  overallstats.css  search.js  speakercontribution.css  tdindex.css  tdindexsearch.js  tdprofile.css  word.css  wordgraphs.js
app/templates/: debate.html  debateindex.html  debatetext.html  home.html  info.html  overallstats.html  party.html  partyindex.html  (+5 more)
python/: api-query.py  debate-analysis.py  debate-get-contributions.py  debate-language-detector.py  get-debates-csv.py  party-data.py  populater.py  scraper.py  sentiment-analysis.py  td-metadata.py  td-overall-data.py  test.py  word-analysis.py
static/: debate.css  debateindex.css  general.css  graphs.js  home.css  style.css  tdprofile.css
templates/: dail34.html  debate.html  debateindex.html  debatetext.html  home.html  info.html  overallstat.html  overallstats.html  partyindex.html  speakercontribution.html  td.html  tdindex.html  voteindex.html
