[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromium>=0.0.0",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "oireachtas-api",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "requests>=2.34.0",
    "spacy>=3.8.14",
    "trafilatura>=2.0.0",
]

[tool.uv.sources]
oireachtas-api = { git = "https://github.com/Irishsmurf/OireachtasAPI.git" }
