[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromium>=0.0.0",
    "dash>=4.3.0",
    "flask>=3.1.3",
    "lingua-language-detector>=2.2.0",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "oireachtas-api",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "plot>=0.6.5",
    "plotly>=6.8.0",
    "plotly-express>=0.4.1",
    "requests>=2.34.0",
    "spacy>=3.8.14",
    "textblob>=0.20.0",
    "trafilatura>=2.0.0",
]

[tool.uv.sources]
oireachtas-api = { git = "https://github.com/Irishsmurf/OireachtasAPI.git" }
